@@ -28,6 +28,7 @@ Other fixes:
  - Qt: Fix crash in sprite viewer magnification (fixes mgba.io/i/1362)
  - 3DS: Ensure core 2 can be used for threaded renderer (fixes mgba.io/i/1371)
  - GB Core: Fix toggling WIN and OBJ being swapped
+ - All: Fix several memory leaks
 Misc:
  - GBA Savedata: EEPROM performance fixes
  - GBA Savedata: Automatically map 1Mbit Flash files as 1Mbit Flash
